--- a/volchonok/first html.html
+++ b/volchonok/first html.html
@@ -4,5 +4,8 @@
 </head>
 <body>
 <p>My first html.</p>
+<h1>This is test html document.</h1>
+<h2>This is test html document.</h2>
+<h3>This is test html document.</h3>
 </body>
 </html>
